- 외부 의존성 S3/Firebase 연결 - DTO 설정